Fix broken bbox device caused by the 'fillpage' commit of rev 9288. This resolves bug 690260 and other cases where the bbox was all 0's.

DETAILS:

When the 'RECT_IS_PAGE' check was removed, the BBOX_INIT_BOX function was
invoked unconditionally MUCH too often, leading to an empty bbox (0's)
which also caused the x11 device to not update many areas from the under-
lying image24 buffer to the screen. The 'BBOX_INIT_BOX' should only be
needed when the params change the geometry or when 'fillpage' is done.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9431 a1074d23-0009-0410-80fe-cf8c14f379e6